<resources>
    <string name="app_name">RestoGo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu-->
    <string name="nav_inicio">Inicio</string>
    <string name="nav_mapa">Mapa</string>
    <string name="nav_publicar">Publicar</string>
    <string name="nav_cuenta">Cuenta</string>
    <string name="nav_iniciar_sesion">Iniciar sesión</string>
    <string name="nav_cerrar_sesion">Cerrar sesión</string>
    <string name="nav_nombre_usuario">Sesión no iniciada</string>

    <!--Lista restaurantes-->
    <string name="botonFiltroComidas">Buscar por tipo de comida</string>

    <!--Publicar-->
    <string name="hint_nombre_restaurant">Nombre</string>
    <string name="hint_direcc_restaurant">Dirección</string>
    <string name="hint_tipos_comida">Tipos de comida</string>
    <string name="dialog_selecc_comidas">Seleccione tipos de comida</string>
    <string name="text_horario">Horario</string>
    <string name="botonApertura">Apertura</string>
    <string name="botonCierre">Cierre</string>
    <string name="botonCamara">Cámara</string>
    <string name="botonGaleria">Galería</string>
    <string name="botonPublicar">Publicar</string>

    <!--Login-->
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Contraseña</string>
    <string name="link_registro">No tiene cuenta? Regístrese</string>
    <string name="botonLogin">Login</string>

    <!--Registro-->
    <string name="botonCrearCuenta">Crear cuenta</string>

    <!--Msjs error-->
    <string name="error_campo_requerido">Campo requerido</string>
    <string name="error_campo_formato">Formato incorrecto</string>
    <string name="error_autenticacion">Error en la autenticación</string>
    <string name="error_crear_cuenta">Error al crear la cuenta</string>
    <string name="error_publicar_img">Error al subir la imagen. No se publicó</string>
    <string name="error_internet">No hay conexión a internet</string>

    <!--Msjs-->
    <string name="msj_espere">Espere</string>
    <string name="msj_cargando">Cargando</string>
    <string name="msj_inicie_sesion">Debe iniciar sesión primero</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="permiso_localizacion">Se requiere acceso a su ubicación para precisión del mapa</string>
    <string name="permiso_lectura_almac">Se requiere acceso de lectura al almacenamiento externo</string>

    <string name="web_client_id">478336960932-acdnb5kdnb21s95shev90j7k798mmsvd.apps.googleusercontent.com</string>

    <string name="nav_carga_datos">Cargar Datos</string>
    <string name="nav_carga_tipo_comida">Tipo Comida</string>
    <string name="title_activity_pedido">Pedidos de reserva</string>

    <!--Msjs-->
    <string name="tipos_comida">Tipos de comida disponibles</string>
    <string name="direccion">Ubicación</string>
    <string name="dias">Días</string>
    <string name="horario">Horario</string>
    <string name="btn_reserva">Reservar</string>
    <string name="btn_confirma_reserva">Confirmar</string>
    <string name="lbl_dia">Dia:</string>
    <string name="lbl_hora">Hora:</string>
    <string name="lbl_cantidad_personas">Cantidad de personas:</string>

    <string name="error_falta_fecha">Debe ingresar una fecha</string>
    <string name="error_falta_hora">Debe ingresar una hora</string>

    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>


</resources>
